syntax = "proto3";

import "google/api/validate.proto";

option go_package = "github.com/Shemistan/uzum_auth/pkg/login_v1;login_v1";

service LoginV1{
  rpc Login (Login.Request) returns (Login.Response);
  rpc GetData(GetData.Request) returns (GetData.Response);
}

message Login {
  message Request{
    string login = 1 [(validate.rules).string.email = true];
    string password = 2 [(validate.rules).string.min_len = 4];
  }

  message Response {
    string refresh_token = 1;
    string access_token = 2;
  }
}

message GetData {
  message Request{
    string endpoint_address = 1;
  }
  message Response {
    string userId = 1;
    string role = 2;
  }
}

message AuthUser {
  string login = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string = {min_len: 4, max_len: 40}];
}













